Issue #34. Added scrollbars

--- a/package/mod/jeelo/css/main.css
+++ b/package/mod/jeelo/css/main.css
@@ -64,3 +64,10 @@ input.customcommand {
     width: 11px;
     height: 11px;
 }
+
+#page-content #region-main {
+    overflow: auto;
+}
+#page-content .region-content {
+    overflow: auto;
+}
